[gd_scene load_steps=22 format=2]

[ext_resource path="res://Settings.gd" type="Script" id=1]
[ext_resource path="res://Themes/toggle_button_off.png" type="Texture" id=2]
[ext_resource path="res://Themes/toggle_button_on.png" type="Texture" id=3]
[ext_resource path="res://Fonts/jomhuria.font" type="BitmapFont" id=4]
[ext_resource path="res://Sounds/tabla/130428__mmiron__na-sharp.ogg" type="AudioStream" id=5]
[ext_resource path="res://GUI/back.png" type="Texture" id=6]

[sub_resource type="StyleBoxEmpty" id=19]


[sub_resource type="StyleBoxFlat" id=20]

bg_color = Color( 0.392157, 0.866667, 0.0901961, 1 )

[sub_resource type="StyleBoxEmpty" id=21]


[sub_resource type="StyleBoxEmpty" id=7]


[sub_resource type="StyleBoxEmpty" id=8]


[sub_resource type="StyleBoxEmpty" id=9]


[sub_resource type="StyleBoxEmpty" id=10]


[sub_resource type="StyleBoxEmpty" id=11]


[sub_resource type="StyleBoxEmpty" id=12]


[sub_resource type="StyleBoxEmpty" id=13]


[sub_resource type="StyleBoxEmpty" id=14]


[sub_resource type="StyleBoxFlat" id=15]

bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )

[sub_resource type="StyleBoxFlat" id=16]

bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=17]

bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )

[sub_resource type="StyleBoxEmpty" id=18]


[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 450.0
margin_top = 150.0
margin_right = -110.0
margin_bottom = -810.0
script = ExtResource( 1 )

[node name="Music" type="CheckButton" parent="."]
margin_left = -400.0
margin_top = 100.0
margin_right = 100.0
margin_bottom = 200.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Music"

[node name="Sounds" type="CheckButton" parent="."]
margin_left = -400.0
margin_top = 250.0
margin_right = 100.0
margin_bottom = 350.0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 3 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
pressed = true
text = "Sounds"

[node name="Enter_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 5.0

[node name="Black" type="Button" parent="."]
margin_left = -400.0
margin_top = 450.0
margin_right = -150.0
margin_bottom = 550.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
text = "Black"

[node name="White" type="Button" parent="."]
margin_left = -150.0
margin_top = 450.0
margin_right = 100.0
margin_bottom = 550.0
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = true
text = "White"

[node name="Language" type="Button" parent="."]
margin_left = -361.853
margin_top = 676.52
margin_right = 240.147
margin_bottom = 782.52
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "Lingvo/Language"

[node name="About" type="Button" parent="."]
margin_left = -241.09
margin_top = 742.478
margin_right = -12.0897
margin_bottom = 870.478
rect_scale = Vector2( 0.7, 0.7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.741176, 0.741176, 0.741176, 1 )
custom_colors/font_color_pressed = Color( 0.458824, 0.458824, 0.458824, 1 )
text = "About"

[node name="BG_top" type="Polygon2D" parent="."]
position = Vector2( -450, -150 )
polygon = PoolVector2Array( 0, 0, 0, 70, 600, 70, 600, 0 )
color = Color( 0, 0, 0, 1 )

[node name="Title" type="Label" parent="BG_top"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 100.0
margin_right = 767.0
margin_bottom = 117.0
rect_scale = Vector2( 0.6, 0.6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Settings"
align = 1
valign = 1

[node name="Back" type="Button" parent="BG_top"]
margin_left = 530.0
margin_right = 670.0
margin_bottom = 140.0
rect_scale = Vector2( 0.5, 0.5 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 6 )

[connection signal="toggled" from="Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="Sounds" to="." method="_on_Sounds_toggled"]
[connection signal="pressed" from="Black" to="." method="_on_Black_pressed"]
[connection signal="pressed" from="White" to="." method="_on_White_pressed"]
[connection signal="pressed" from="Language" to="." method="_on_Language_pressed"]
[connection signal="pressed" from="About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="BG_top/Back" to="." method="_on_Back_pressed"]
